# cropscan

./: build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/nuist/cropscan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/nuist/cropscan/: IMyAidlInterface.aidl  PcPathBean.aidl
app/src/main/cpp/: CMakeLists.txt  JniMethod.cpp  ScanToJni.cpp
app/src/main/cpp/FileClass/: FileExtension.h  FileInfo.cpp  Scanner.cpp  Scanner.h  SimpleThreadPool.cpp
app/src/main/java/com/nuist/cropscan/: ActCamera.java  ActWeb.java  HomeAct.java  MainActivity.java  PcPathBean.java  RippleView.java  Tools.java  VersionCheck.java
app/src/main/java/com/nuist/gallery/: ActCameraX.java  ActGallery.java  GalleryConfig.java
app/src/main/java/com/nuist/guide/: Act_Login.java
app/src/main/java/com/nuist/request/: BASEURL.java  DownloadListener.java  HttpOk.java
app/src/main/java/com/nuist/tool/: AniUtils.java  JsHybrid.java  ReflectUtil.java
app/src/main/java/com/nuist/webview/: ActWeb.java  FileConfig.java  FragWeb.java
app/src/main/res/animator/: dialog_in_anim.xml  dialog_out_anim.xml
app/src/main/res/color/: main_nav_color.xml
app/src/main/res/drawable/: back.xml  back2.xml  back_btn.xml  bg_progressbar.xml  cir_bg.xml  cir_btn.xml  circle.xml  history.xml  item_scan_card.xml  ke.xml  load.xml  recapture.xml  result_frame.xml  sao.xml  slide.xml  user.xml
app/src/main/res/layout/: act_crop_eval.xml  act_frame.xml  act_home.xml  act_main.xml  activity_act_camera_x.xml  bak_activity_act_camera_x.xml  cameratip.xml  dialog_crop_tip.xml  dialog_download.xml  dialog_eval.xml  dialog_load.xml  dialog_loading.xml  dialog_ripple.xml  dialog_select_folder.xml  dialogresult.xml  frag_introduce.xml  frag_web.xml  framelayout.xml  gallery_main.xml  item_disease.xml  login_layout.xml  recy_item_camera_bottom_tip.xml  recy_item_crop_result.xml  recy_item_disease.xml  recy_item_folder.xml
app/src/main/res/layout-land/: bak_activity_act_camera_x.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: attr.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
(+88 files in other folders)
